2001-02-09  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* Makefile.am: remove BoundingBox.h

	* BoundingBox.h: removed

2001-02-08  Dekel Tsur  <dekelts@tau.ac.il>
	
	* insettext.C (LocalDispatch): Update selection cursor when moving 
	cursor to the right.
	(moveRightIntern): Call to CursorRight with 2 argument eqaul to false.
	(moveLeftIntern): Ditto.

2001-02-05  Baruch Even  <baruch.even@writeme.com>

	* insetgraphics.C: Updated automatic image conversion, it now goes into
	temporary directory instead of with the image itself.

2001-01-21  Baruch Even  <baruch@ev-en.org>

	* insetgraphics.C: Added Docbook support. Added Automatic image conversion
	to EPS or PNG when needed (support bitmap graphics).

2000-11-02  Baruch Even  <baruch@ev-en.org>

	* insetgraphics.C:
	* insetgraphiscParams.C: Some cleaning up, changing from std::endl to '\n'
	and removal of commented out code.

2001-01-31  Dekel Tsur  <dekelts@tau.ac.il>

	* insetbib.C (callback): Update citations if the key has changed.

2001-01-31  Dekel Tsur  <dekelts@tau.ac.il>

	* insetbib.C (InsetBibKey): Better computation of default key.
	(getScreenLabel) Show both the key and the label.
	(getBibLabel): New method.
	(callback): Force a redraw if the inset have been changed.

2001-01-26  Dekel Tsur  <dekelts@tau.ac.il>

	* insetref.C (getType, getName): Move methods from 
	src/frontends/xforms/FormRef.C.

2001-01-12  Dekel Tsur  <dekelts@tau.ac.il>

	* insettabular.C: Various improvements (use only one dummy position).

2001-01-25  Dekel Tsur  <dekelts@tau.ac.il>

	* insetbib.C (bibitemWidest): Use lyxfont::width instead of
 	par->bibkey->width. This fixes the crashes when running without
	gui or when having included documents.

2001-01-22  Dekel Tsur  <dekelts@tau.ac.il>

	* insetcommand.C (getAsString, setFromString): Cleanup.

2001-01-21  Dekel Tsur  <dekelts@tau.ac.il>

	* insetref.C: Add the array InsetRef::types that contains
	information about all supported reference types.
